Projet_GL/src/test/deca/context/valid/unprovided/testObjet/methods/methodSelectionConvFloatParam.deca
// Description:
//   Définition d'une méthode prenant en paramètre un float et appelée avec un int
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 22/01/2018

class A {

      float x;

      void setX(float x){
      	   this.x = x;
      }
}
{
        A a = new A();
	a.setX(1); //Intervention de ConvFloat
}
